--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "19.2.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.1",
+    "react-router-dom": "^7.13.0",
     "recharts": "^3.6.0",
     "use-sound": "^5.0.0"
   },
